# Humanoid_Robot_RosMessage

./: .gitignore  organize_submodules.sh
action/gongga_interface/: FollowJointTrajectory.action
docs/: FINAL_DIRECTORY_STRUCTURE.md  README.md  ROS2_MESSAGE_GENERATION_EXPLANATION.md  SUBMODULE_SYSTEM_SUMMARY.md  THIRD_PARTY_INTEGRATION_GUIDE.md
gongga_interface/: CMakeLists.txt
gongga_interface/msg/: DecisionInfo.msg  ModuleStatus.msg  NaviStatus.msg
gongga_interface/srv/: CommandService.srv  DecisionInfo.srv  ExecuteTrajectory.srv
include/control_messages/msg/: control_command.hpp  rosidl_generator_cpp__visibility_control.hpp
include/control_messages/msg/detail/: control_command__builder.hpp  control_command__functions.c  control_command__functions.h  control_command__rosidl_typesupport_fastrtps_c.h  control_command__rosidl_typesupport_fastrtps_cpp.hpp  control_command__rosidl_typesupport_introspection_c.h  control_command__rosidl_typesupport_introspection_cpp.hpp  control_command__struct.h  control_command__struct.hpp  control_command__traits.hpp  control_command__type_support.c  control_command__type_support.cpp  control_command__type_support.h  control_command__type_support.hpp
include/perception_messages/msg/: perception_img.hpp  perception_masks.hpp  perception_masks_tracks.hpp  perception_track_row.hpp  perception_tracks.hpp  rosidl_generator_cpp__visibility_control.hpp
include/perception_messages/msg/detail/: perception_img__builder.hpp  perception_img__functions.c  perception_img__functions.h  perception_img__rosidl_typesupport_fastrtps_c.h  perception_img__rosidl_typesupport_fastrtps_cpp.hpp  perception_img__rosidl_typesupport_introspection_c.h  perception_img__rosidl_typesupport_introspection_cpp.hpp  perception_img__struct.h  perception_img__struct.hpp  perception_img__traits.hpp  perception_img__type_support.c  perception_img__type_support.cpp  perception_img__type_support.h  perception_img__type_support.hpp  perception_masks__builder.hpp  perception_masks__functions.c  perception_masks__functions.h  perception_masks__rosidl_typesupport_fastrtps_c.h  perception_masks__rosidl_typesupport_fastrtps_cpp.hpp  perception_masks__rosidl_typesupport_introspection_c.h  perception_masks__rosidl_typesupport_introspection_cpp.hpp  perception_masks__struct.h  perception_masks__struct.hpp  perception_masks__traits.hpp  perception_masks__type_support.c  perception_masks__type_support.cpp  perception_masks__type_support.h  perception_masks__type_support.hpp  perception_masks_tracks__builder.hpp  perception_masks_tracks__functions.c  perception_masks_tracks__functions.h  perception_masks_tracks__rosidl_typesupport_fastrtps_c.h  perception_masks_tracks__rosidl_typesupport_fastrtps_cpp.hpp  perception_masks_tracks__rosidl_typesupport_introspection_c.h  perception_masks_tracks__rosidl_typesupport_introspection_cpp.hpp  perception_masks_tracks__struct.h  perception_masks_tracks__struct.hpp  perception_masks_tracks__traits.hpp  perception_masks_tracks__type_support.c  perception_masks_tracks__type_support.cpp  (+30 more)
motor_interface/: CMakeLists.txt  package.xml
motor_interface/msg/: DebugData.msg  MotorFeedback.msg
motor_interface/srv/: GetJointState.srv
msg/control/: CMakeLists.txt  ControlCommand.msg  package.xml
msg/motor_interface/: MotorDrive.msg
msg/perception/: CMakeLists.txt  PerceptionImg.msg  PerceptionMasks.msg  PerceptionMasksTracks.msg  PerceptionTrackRow.msg  PerceptionTracks.msg  package.xml
srv/gongga_interface/: CMakeLists.txt  GeneratePlan.srv  SceneSync.srv  package.xml
test/: CMakeLists.txt  README.md  build_tests.sh  package.xml  test_submodules.cpp
